--- a/index.html
+++ b/index.html
@@ -223,9 +223,8 @@
                     </ul>
                     <p class="my-3">Copyright 2022 © credition. All rights reserved.</p>
                     <ul class="p-0">
-                        <li><a href="#">Facebook</a></li>
-                        <li><a href="#">Twitter</a></li>
-                        <li><a href="#">Instagram</a></li>
+                        <li><a href="https://kampusmerdeka.kemdikbud.go.id/">Kampus Merdeka</a></li>
+                        <li><a href="https://orbitfutureacademy.id/">Orbit Future Academy</a></li>
                     </ul>
                 </div>
             </div>
