--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="row">
                 <div class="col-12 mx-auto" data-aos="zoom-in-up" data-aos-delay="500">
                     <h1 class="text-white display-3 my-4">PREDIKSI<br /> PELANGGAN ANDA</h1>
-                    <h6 class="text-white">Membantu untuk mengetahui karakteristik pelanggan Anda.<br><br></h6>
+                    <h6 class="text-white">Membantu untuk memprediksi pembayaran pelanggan Anda.<br><br></h6>
                     <a href="https://credition.herokuapp.com/" target="_blank" class="btn btn-brand">Mulai</a>
                 </div>
             </div>
